# VQE-code

./: .gitignore  .gitignore.save  Ansatz_Circuit_Functions.py  Ansatz_Generator_Functions.py  CORRECT_TF_OPTIMIZER_FUNCTION.ipynb  Graph.py  Hamiltonian_Generator_Functions.py  LICENSE  LICENSE.rst  README.rst  Trotterisation.py  Unitary_partitioning.py  pyproject.toml  requirements.txt  setup.py  test_Ansatz_Circuit_Functions.py  test_Ansatz_Generator_Functions.py  test_Graph.py  test_Hamiltonian_Generator_Functions.py  test_Unitary_partitioning.py  travis.yml
Projects/: ALCU.py  ALCU_UP.py  AMPLITUDES - VQE_LiH_BK_STO_6G_Wavefunction.ipynb  A_LCU notebook.ipynb  Compare_H_reduction_VS_standard_VQE.ipynb  Compare_H_reduction_VS_standard_VQE_H2_example.ipynb  Compare_H_reduction_VS_standard_VQE_wavefunction.ipynb  Compare_reduction_VS_standard.ipynb  Compare_reduction_VS_standard_shorter.ipynb  Gate Scaling-Copy1.ipynb  Gate Scaling.ipynb  Gate_Count.ipynb  Grey Code control approach updated.ipynb  Grey Code control approach.ipynb  Grey_Circuit_REDUCED.txt  Grey_Circuit_non_reduced.txt  H2O BK example.ipynb  H2_BK_Transform.ipynb  Individual_LiH_test.ipynb  LCU Method-Copy1.ipynb  LCU Method.ipynb  LCU_GUG_method.py  LCU_LiH.ipynb  LCU_water.ipynb  Latex_table.tex  Latex_table1.tex  Latex_table2.tex  Latex_table3.tex  Latex_table4.tex  LiH_Unitary_part.py  LiH_with_NOON_reduction.py  NewTest.py  Optimization_measurement_reduction.py  PauilS_Selection.py  Project_Measurement_Reduction.py  Py_SCF Hamiltonian.ipynb  QPE_reduction.py  Standard_VQE.ipynb  (+23 more)
docs/: Graph.rst  (+8 more)
(+989 files in other folders)
